Prep for stable staging release. Changed to check latest.json for new releases Updated to automatically preserve user data when uninstalled silently, rather than ask with a dialog box. Updated to show message about lack of updates when running in a 32-bit OS

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 Installer/BuiltInstallers/*
+HandBrakeInterop.XmlSerializers.dll
+Flags/*
 packages/*
-ResourcesImport/*
+Import/*
+.vs
+*.pdn
 */bin/*
 */obj/*
 *gen.iss
@@ -8,5 +12,3 @@ ResourcesImport/*
 *.csproj.user
 *.user
 Installer/Files/*
-vidcoder.zip
-*.XmlSerializers.dll
