--- a/VidCoder/packages.config
+++ b/VidCoder/packages.config
@@ -2,6 +2,11 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net40-Client" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net40-Client" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net40-client" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40-client" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40-client" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net40-client" />
   <package id="MvvmLightLibs" version="4.4.32.1" targetFramework="net40-Client" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net40-client" />
   <package id="valueinjecter" version="2.3.3" targetFramework="net40-Client" />
 </packages>
