Updated HandBrake core to 1.0.1. Fixed encode failure on presets with a hidden QSV decoding flag. Added ability to manually supply a JSON encode string in Debug builds

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -265,6 +265,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\DebugEncodeJsonDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\EncodeDetailsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -629,6 +633,9 @@
     <Compile Include="ViewModel\ShutdownWarningWindowViewModel.cs" />
     <Compile Include="View\CustomMessageDialog.xaml.cs">
       <DependentUpon>CustomMessageDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\DebugEncodeJsonDialog.xaml.cs">
+      <DependentUpon>DebugEncodeJsonDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\EncodeDetailsWindow.xaml.cs">
       <DependentUpon>EncodeDetailsWindow.xaml</DependentUpon>
