--- a/VidCoder/packages.config
+++ b/VidCoder/packages.config
@@ -14,6 +14,7 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
   <package id="Rx-XAML" version="2.2.5" targetFramework="net45" />
   <package id="Splat" version="1.6.2" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net46" />
   <package id="UDE.CSharp" version="1.1.0" targetFramework="net46" />
   <package id="Unity" version="4.0.1" targetFramework="net46" />
   <package id="valueinjecter" version="3.1.1.3" targetFramework="net46" />
