--- a/VidCoderWorker/packages.config
+++ b/VidCoderWorker/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net46" />
   <package id="Unity" version="4.0.1" targetFramework="net46" />
 </packages>
