--- a/VidCoderCommon/VidCoderCommon.csproj
+++ b/VidCoderCommon/VidCoderCommon.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Model\VCPictureRotation.cs" />
     <Compile Include="Model\VCProfile.cs" />
     <Compile Include="Model\VCScalingMode.cs" />
+    <Compile Include="Model\VCSharpen.cs" />
     <Compile Include="Model\VCSizingMode.cs" />
     <Compile Include="Model\VCVideoEncodeRateType.cs" />
     <Compile Include="Model\VidCoderContractResolver.cs" />
