--- a/VidCoder/packages.config
+++ b/VidCoder/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net462" />
   <package id="DesktopBridge.Helpers" version="1.1" targetFramework="net462" />
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net46" />
   <package id="FastMember" version="1.0.0.11" targetFramework="net45" />
+  <package id="Fluent.Ribbon" version="6.0.0.208" targetFramework="net462" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="reactiveui" version="6.5.0" targetFramework="net45" />
